rds.tf
/*
resource "aws_db_instance" "web_db" {
    allocated_storage = 8
    engine = "mysql"
    engine_version = "5.7"
    instance_class = "db.t3.micro"
    username = "admin"
    password = "admin"
    skip_final_snapshot = true
}
*/
